Adjust mobile and tablet page layouts

--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@ article {
 }
 .blog main article {
     margin: 0.25% 0.5%;
-	width: 48%; /* NOTE TO SELF: THE WIDTH WILL BE NEED TO BE ADJUSTED FOR DIFFERENT BREAKPOINTS TO SET THE NUMBER OF TILES IN A ROW. */
+	width: 100%;
 }
 .blog article h2,
 .date,
@@ -371,6 +371,7 @@ article {
     top: 1rem;
     left: 1rem;
     font-size: 2rem;
+    line-height: 2rem; /* Black Bamboo font is caps only so descenders don't worry about overlap */
     text-shadow: 1px 3px 5px rgba(2, 10, 16, 0.4);
 }
 .date {
@@ -616,9 +617,10 @@ li.pj_skills_icon:hover {
     	top: 0;
     	z-index: 1;	/*Prevents it from sliding under gallery*/
 	}
-	main {
+	main,
+    h1 {
 	    width: 80%;
-	    margin: 15% auto 2%;
+	    margin: 10% auto 2%;
 	}
 	nav ul {
 		padding: 0;
@@ -645,12 +647,16 @@ li.pj_skills_icon:hover {
 		margin-top: 20vh;
 	}
     /* Home page */
-    .home section:not(.splash), aside {
+    .home section:not(.splash),
+    aside {
         margin: 2rem auto;
         max-width: 800px;
     }
     .home_img-left, .home_img-right  {
         grid-column-gap: 3rem;
+    }
+    .blog main article {
+    	width: 48%;
     }
 }
 /* ========== END Media Query (more than 700px) ========== */
@@ -685,10 +691,16 @@ li.pj_skills_icon:hover {
 		padding-right: 1%;
 		vertical-align: middle;
 	}
+    .blog main article {
+    	width: 32%;
+    }
 }
 /* ========== END Media Query (more than 1000px) ========== */
 /* ========== Media Query (more than 1300px) ========== */
-@media (min-width: 1300px) {
+@media (min-width: 1400px) {
+    .blog main article {
+    	width: 24%;
+    }
 }
 /* ========== END Media Query (more than 1300px)  ========== */
 /* ========== Call to Action Animation   -========== */
