--- a/css/main.css
+++ b/css/main.css
@@ -754,6 +754,26 @@ li.pj_skills_icon:hover {
     .blog main article {
     	width: 24%;
     }
+    .single {
+        display: grid;
+        grid-template-columns: repeat( 12, 1fr);
+        grid-template-rows: 350px auto;
+        grid-column-gap: 5rem;
+    }
+    .single main,
+    .single aside {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .single main {
+        grid-row: 1 / 3;
+        grid-column: 2 / span 7;
+    }
+    .single aside {
+        grid-row: 2 / 3;
+        grid-column: 9 / 12;
+    }
 }
 /* ========== END Media Query (more than 1300px)  ========== */
 /* ========== Call to Action Animation   -========== */
