--- a/css/main.css
+++ b/css/main.css
@@ -501,9 +501,6 @@ footer.blog_footer,
 footer.blog_footer {
     background-color: rgba(205, 200, 220, 0.5);
 }
-.single aside {
-
-}
 /* ========== END Blog Styles ========== */
 /* ========== Contact Styles ========== */
 .contact_intro,
@@ -662,6 +659,9 @@ li.pj_skills_icon:hover {
         max-width: 220px;
         margin: 1rem auto;
     }
+    .pj_intro {
+        margin: 6rem;
+    }
 }
 /* ========== END Media Query (more than 450px) ========== */
 /* ========== Media Query (more than 700px)  ========== */
@@ -712,8 +712,22 @@ li.pj_skills_icon:hover {
     .home_img-left, .home_img-right  {
         grid-column-gap: 3rem;
     }
-    .blog main article {
+    .pj_view-more_thumbs {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    .blog main article,
+    .pj_view-more_thumbs article {
     	width: 48%;
+    }
+    .pj_view-more_thumbs section {
+        width: 98%;
+    }
+    .pj_view-more_thumbs article,
+    .pj_view-more_thumbs section {
+        margin: 1%;
     }
     .blog_header {
         max-width: 700px;
@@ -760,6 +774,17 @@ li.pj_skills_icon:hover {
         max-width: 700px;
         z-index:800;
     }
+    .pj_view-more_thumbs {
+        flex-wrap: nowrap;
+    }
+    .pj_view-more_thumbs section {
+        width: 25%;
+        padding-top: 0;
+    }
+    .pj_view-more article {
+        width: 23%;
+        margin-left: 2%;
+    }
 }
 /* ========== END Media Query (more than 1000px) ========== */
 /* ========== Media Query (more than 1300px) ========== */
@@ -770,7 +795,7 @@ li.pj_skills_icon:hover {
     .single {
         display: grid;
         grid-template-columns: repeat( 12, 1fr);
-        grid-template-rows: 350px auto;
+        grid-template-rows: 350px auto auto;
         grid-column-gap: 5rem;
     }
     .single main,
@@ -783,13 +808,31 @@ li.pj_skills_icon:hover {
         grid-row: 1 / 3;
         grid-column: 2 / span 7;
     }
-    .single aside {
+    .single .sidebar,
+    .single .project_widgets-container {
         grid-row: 2 / 3;
         grid-column: 9 / 12;
     }
     .blog_header {
         margin-top: 3rem;
         margin-bottom: 3rem;
+    }
+    .pj_view-more {
+        background: none;
+        grid-column: 2 / 12;
+        grid-row: 3 / 4;
+        max-width: unset;
+        box-shadow: none;
+    }
+    .single .pj_view-more {
+        background: none;
+        box-shadow: none;
+    }
+    .single .pj_view-more h2 {
+        font-size: 2rem;
+    }
+    .single .pj_view-more h3 a:link {
+        text-decoration: none;
     }
 }
 /* ========== END Media Query (more than 1300px)  ========== */
