--- a/css/main.css
+++ b/css/main.css
@@ -785,18 +785,15 @@ li.pj_skills_icon:hover {
         width: 23%;
         margin-left: 2%;
     }
-}
-/* ========== END Media Query (more than 1000px) ========== */
-/* ========== Media Query (more than 1300px) ========== */
-@media (min-width: 1400px) {
-    .blog main article {
-    	width: 24%;
-    }
-    .single {
+	.single {
         display: grid;
         grid-template-columns: repeat( 12, 1fr);
-        grid-template-rows: 350px auto auto;
+        grid-template-rows: 300px auto auto auto;
         grid-column-gap: 5rem;
+    }
+    .blog_header {
+        grid-row: 1 / 2;
+        grid-column: 2 / 12;
     }
     .single main,
     .single aside {
@@ -805,17 +802,25 @@ li.pj_skills_icon:hover {
         margin-right: 0;
     }
     .single main {
-        grid-row: 1 / 3;
+        grid-row: 2 / 4;
         grid-column: 2 / span 7;
     }
     .single .sidebar,
     .single .project_widgets-container {
         grid-row: 2 / 3;
         grid-column: 9 / 12;
+        margin-top: 1rem;
+    }
+}
+/* ========== END Media Query (more than 1000px) ========== */
+/* ========== Media Query (more than 1300px) ========== */
+@media (min-width: 1400px) {
+    .blog main article {
+    	width: 24%;
     }
     .blog_header {
-        margin-top: 3rem;
-        margin-bottom: 3rem;
+        margin-top: 4rem;
+        margin-bottom: 2rem;
     }
     .pj_view-more {
         background: none;
