Fix project page layout

--- a/css/main.css
+++ b/css/main.css
@@ -191,14 +191,6 @@ nav ul li a:active {
 	color: rgb(254,254,254);
     text-decoration: underline;
 }
-li.nav-logo img{
-	display: none;
-	vertical-align: middle;
-}
-p.nav-logo {
-    display: inline-block;
-    padding: 0;
-}
 .main-menu {
     display: flex;
     align-items: center;
@@ -239,8 +231,7 @@ nav {
       animation: spin-in 1s;
       box-sizing: content-box; /* Box-sizing will make it disappear */
 	}
-	.nav_hide,
-    p.nav-logo {
+	.nav_hide {
 	  display: none;
 	}
 	nav {
@@ -473,7 +464,7 @@ li.comment {
     margin-top: 3rem;
 }
 .single aside {
-    background-color: rgb(21, 41, 22);
+    background-color: rgba(21, 41, 22, 0.3);
     width: 90%;
     margin: 2rem auto;
 }
@@ -599,6 +590,7 @@ label {
         font-size: 2rem;
         line-height: 2.3rem;
         background: url(../img/star-fade-bkg.jpg) no-repeat;
+        background-size: auto 100%;
         padding: 1rem;
         border-radius: 2px 0 0 2px;
         text-shadow: 1px 1px 4px rgba(50, 50, 50, 0.3);
@@ -667,7 +659,7 @@ label {
         margin: 1rem auto;
     }
     .pj_intro {
-        margin: 6rem;
+        margin: 6rem 0;
     }
 }
 /* ========== END Media Query (more than 450px) ========== */
@@ -756,6 +748,11 @@ label {
 /* ========== END Media Query (more than 850px) ========== */
 /* ========== Media Query (more than 1000px)  ========== */
 @media (min-width: 1000px) {
+    .single-projects h1,
+    .single h1 {
+        padding-left: 3rem;
+        font-size: 2.2rem;
+    }
 	article h2 {
 		font-size: 1.8rem;
 	}
@@ -800,7 +797,7 @@ label {
         display: grid;
         grid-template-columns: repeat( 12, 1fr);
         grid-template-rows: 300px auto auto auto;
-        grid-column-gap: 5rem;
+        grid-column-gap: 3rem;
     }
     .blog_header {
         grid-row: 1 / 2;
@@ -822,6 +819,10 @@ label {
         grid-column: 9 / 12;
         margin-top: 1rem;
     }
+    .single .pj_view-more {
+        grid-row: 4 / 5;
+        grid-column: 2 / span 7;
+    }
     .post-type-archive-projects article {
         width: 30%;
         margin-right: 3%;
@@ -842,22 +843,29 @@ label {
         margin-top: 4rem;
         margin-bottom: 2rem;
     }
-    .pj_view-more {
-        background: none;
-        grid-column: 2 / 12;
-        grid-row: 3 / 4;
-        max-width: unset;
-        box-shadow: none;
+    .single {
+        grid-column-gap: 2rem;
     }
     .single .pj_view-more {
-        background: none;
-        box-shadow: none;
+        grid-column: 3 / span 7;
+        grid-row: 4 / 5;
+        max-width: unset;
     }
     .single .pj_view-more h2 {
         font-size: 2rem;
     }
     .single .pj_view-more h3 a:link {
         text-decoration: none;
+    }
+    .single main {
+        grid-row: 2 / 4;
+        grid-column: 3 / span 7;
+    }
+    .single .sidebar,
+    .single .project_widgets-container {
+        grid-row: 2 / 3;
+        grid-column: 10 / 12;
+        margin-top: 1rem;
     }
 }
 /* ========== END Media Query (more than 1300px)  ========== */
