--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,6 @@ body {
 body {
     font-family: 'Hind', sans-serif;
     color: rgb( 228, 225, 221);
-    line-height: 1.4rem
 }
 h1,
 h2,
@@ -37,13 +36,18 @@ h2,
     font-family: 'black-bamboo', 'Hind', sans-serif;
     color: rgb(244,182,61);
 }
-h2,
-h3 {
+h2 {
 	font-size: 2rem;
+    line-height: 2.2rem;
+	margin-bottom: 1.5rem;
+}
+h3 {
+	font-size: 1.5rem;
 	margin-bottom: 1.5rem;
 }
 p {
-	font-size: 1.1rem;
+	font-size: 1.2rem;
+    line-height: 1.5rem;
 }
 h2 a {
 	text-decoration: none;
@@ -364,6 +368,9 @@ li.email a:link {
 	width: 100%;
 	height: 100%;
 }
+.single-projects .projects_skills {
+    display: none;
+}
 /* ========== END Project Styles ========== */
 /* ========== Blog Index Styles ========== */
 .blog main,
@@ -405,15 +412,15 @@ article {
 }
 .blog article p:last-child {
 	background: rgba(2, 10, 16, 0.9);
-	top: 32%;
+	top: 30%;
+    bottom: 0;
     left: 105%;
-    width: calc(100% - 3rem);
-    padding: 3rem 2rem;
+    width: 100%;
+    padding: 1.5rem 1rem;
     z-index: 50;
-    border-radius: 10px 0 0 10px;
 }
 .blog article:hover p:last-child {
-    left: 3rem;
+    left: 0;
 }
 .blog article:hover .date {
     left: 0;
@@ -710,6 +717,9 @@ label {
     }
     .pj_intro {
         margin: 6rem 0;
+    }
+    .single-projects .projects_skills {
+        display: flex;
     }
 }
 /* ========== END Media Query (more than 450px) ========== */
