--- a/css/main.css
+++ b/css/main.css
@@ -215,6 +215,17 @@ nav {
     width: 100%;
 }
 /* ========== END Nav Styles ========== */
+/* ======== Footer Styles ========*/
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+footer p {
+    margin: 1rem;
+}
+/* ========== END Footer Styles ========== */
 /* ======== Hamburger Menu Styles ========*/
 .hamburger,
 .hamburger__close {
