--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,8 @@ footer {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    grid-row: 5 / 6;
+    grid-column: 1 / span 12;
 }
 footer p {
     margin: 1rem;
